<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".main.fragment.NetmaskFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintBottom_toTopOf="@id/form_container"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_app_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextAppTitleStyle"
            android:text="@string/cidr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_app_desc"
            app:layout_constraintTop_toBottomOf="@id/text_app_title"
            app:layout_constraintStart_toStartOf="@id/text_app_title"
            app:layout_constraintEnd_toEndOf="@id/text_app_title"
            style="@style/TextAppDescriptionStyle"
            android:text="@string/cidr_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_netmask_container"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_netmask"
                style="@style/TextInputEditStyle"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:hint="@string/netmask_address" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_cidr"
            style="@style/TextNetmaskResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/your_result"
            app:layout_constraintEnd_toEndOf="@id/edit_netmask_container"
            app:layout_constraintStart_toStartOf="@id/edit_netmask_container"
            app:layout_constraintTop_toBottomOf="@id/edit_netmask_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_container">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_calculate"
            style="@style/ButtonStyle"
            android:layout_width="180dp"
            android:layout_height="75dp"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            style="@style/ButtonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/going_back"
            app:layout_constraintEnd_toEndOf="@id/btn_calculate"
            app:layout_constraintStart_toStartOf="@id/btn_calculate"
            app:layout_constraintTop_toBottomOf="@id/btn_calculate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>